charts/kubestash-operator/tmp.yaml
---
# Source: kubestash-operator/templates/webhook-server/monitoring/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-kubestash-operator
  namespace: default
  labels:
    helm.sh/chart: kubestash-operator-v0.16.0
    app.kubernetes.io/name: kubestash-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/name: kubestash-operator
    app.kubernetes.io/instance: release-name
    component: webhook-server
---
# Source: kubestash-operator/templates/webhook-server/webhook_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-kubestash-operator-webhook
  namespace: default
  labels:
    helm.sh/chart: kubestash-operator-v0.16.0
    app.kubernetes.io/name: kubestash-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app.kubernetes.io/name: kubestash-operator
    app.kubernetes.io/instance: release-name
    component: webhook-server
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
---
# Source: kubestash-operator/templates/operator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-kubestash-operator-operator
  namespace: default
  labels:
    helm.sh/chart: kubestash-operator-v0.16.0
    app.kubernetes.io/name: kubestash-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.16.0"
    app.kubernetes.io/managed-by: Helm
    component: operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubestash-operator
      app.kubernetes.io/instance: release-name
      component: operator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubestash-operator
        app.kubernetes.io/instance: release-name
        component: operator
      annotations:
        checksum/apiregistration.yaml: 1d8200cddcff599e6596258d1ac896fd44e0e5a1770a060a87b12d554a6fddd1
    spec:
      
      serviceAccountName: release-name-kubestash-operator
      containers:
      - name: operator
        image: "ghcr.io/kubestash/kubestash:v0.16.0"
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 65534
          seccompProfile:
            type: RuntimeDefault
        args:
          - operator
          - --config=/var/config/config.yaml
        resources:
          requests:
            cpu: 100m
        volumeMounts:
        - mountPath: /tmp
          name: tmpdir
        - name: kubestash-tmp-volume
          mountPath: /kubestash-tmp
        - name: config
          mountPath: /var/config
      volumes:
      - name: tmpdir
        emptyDir: {}
      - name: kubestash-tmp-volume
        emptyDir: {}
      - name: config
        configMap:
          name: release-name-kubestash-operator-config
      securityContext:
        fsGroup: 65535
      nodeSelector:
        kubernetes.io/os: linux
---
# Source: kubestash-operator/templates/webhook-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-kubestash-operator-webhook-server
  namespace: default
  labels:
    helm.sh/chart: kubestash-operator-v0.16.0
    app.kubernetes.io/name: kubestash-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.16.0"
    app.kubernetes.io/managed-by: Helm
    component: webhook-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubestash-operator
      app.kubernetes.io/instance: release-name
      component: webhook-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubestash-operator
        app.kubernetes.io/instance: release-name
        component: webhook-server
      annotations:
        checksum/apiregistration.yaml: 13300ffb6fce47ac3520984697bb6d22e2216be0209122cc8a0d035a34b30b47
    spec:
      
      serviceAccountName: release-name-kubestash-operator
      containers:
      - name: webhook-server
        image: "ghcr.io/kubestash/kubestash:v0.16.0"
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 65534
          seccompProfile:
            type: RuntimeDefault
        args:
          - webhook-server
          - --config=/var/config/config.yaml
        ports:
        - name: webhook-server
          containerPort: 9443
          protocol: TCP
        resources:
          requests:
            cpu: 100m
        volumeMounts:
        - mountPath: /tmp
          name: tmpdir
        - name: kubestash-tmp-volume
          mountPath: /kubestash-tmp
        - name: serving-cert
          mountPath: /var/serving-cert
          readOnly: true
        - name: config
          mountPath: /var/config
      - name: kube-rbac-proxy
        image: "ghcr.io/appscode/kube-rbac-proxy:v0.15.0"
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 65534
          seccompProfile:
            type: RuntimeDefault
        args:
        - --secure-listen-address=0.0.0.0:8443
        - --upstream=http://127.0.0.1:8080/
        - --logtostderr=true
        - --v=10
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
      volumes:
      - name: tmpdir
        emptyDir: {}
      - name: kubestash-tmp-volume
        emptyDir: {}
      - name: serving-cert
        secret:
          defaultMode: 420
          secretName: release-name-kubestash-operator-webhook-cert
      - name: config
        configMap:
          name: release-name-kubestash-operator-config
      securityContext:
        fsGroup: 65535
      nodeSelector:
        kubernetes.io/os: linux
---
# Source: kubestash-operator/templates/license/license.yaml
# if license file is provided, then create a secret for license
---
# Source: kubestash-operator/templates/webhook-server/mutating_webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: release-name-kubestash-operator
  labels:
    helm.sh/chart: kubestash-operator-v0.16.0
    app.kubernetes.io/name: kubestash-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade
    "helm.sh/hook-delete-policy": before-hook-creation
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: release-name-kubestash-operator-webhook
        namespace: default
        path: /mutate-storage-kubestash-com-v1alpha1-backupstorage
      caBundle: bm90LWNhLWNlcnQ=
    failurePolicy: Fail
    name: mbackupstorage.kb.io
    rules:
      - apiGroups:
          - storage.kubestash.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - backupstorages
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: release-name-kubestash-operator-webhook
        namespace: default
        path: /mutate-storage-kubestash-com-v1alpha1-retentionpolicy
      caBundle: bm90LWNhLWNlcnQ=
    failurePolicy: Fail
    name: mretentionpolicy.kb.io
    rules:
      - apiGroups:
          - storage.kubestash.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - retentionpolicies
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: release-name-kubestash-operator-webhook
        namespace: default
        path: /mutate-core-kubestash-com-v1alpha1-backupblueprint
      caBundle: bm90LWNhLWNlcnQ=
    failurePolicy: Fail
    name: mbackupblueprint.kb.io
    rules:
      - apiGroups:
          - core.kubestash.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - backupblueprints
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: release-name-kubestash-operator-webhook
        namespace: default
        path: /mutate-core-kubestash-com-v1alpha1-backupconfiguration
      caBundle: bm90LWNhLWNlcnQ=
    failurePolicy: Fail
    name: mbackupconfiguration.kb.io
    rules:
      - apiGroups:
          - core.kubestash.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - backupconfigurations
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: release-name-kubestash-operator-webhook
        namespace: default
        path: /mutate-core-kubestash-com-v1alpha1-hooktemplate
      caBundle: bm90LWNhLWNlcnQ=
    failurePolicy: Fail
    name: mhooktemplate.kb.io
    rules:
      - apiGroups:
          - core.kubestash.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - hooktemplates
    sideEffects: None
---
# Source: kubestash-operator/templates/webhook-server/validating_webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: release-name-kubestash-operator
  labels:
    helm.sh/chart: kubestash-operator-v0.16.0
    app.kubernetes.io/name: kubestash-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade
    "helm.sh/hook-delete-policy": before-hook-creation
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: release-name-kubestash-operator-webhook
        namespace: default
        path: /validate-storage-kubestash-com-v1alpha1-backupstorage
      caBundle: bm90LWNhLWNlcnQ=
    failurePolicy: Fail
    name: vbackupstorage.kb.io
    rules:
      - apiGroups:
          - storage.kubestash.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - backupstorages
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: release-name-kubestash-operator-webhook
        namespace: default
        path: /validate-storage-kubestash-com-v1alpha1-repository
      caBundle: bm90LWNhLWNlcnQ=
    failurePolicy: Fail
    name: vrepository.kb.io
    rules:
      - apiGroups:
          - storage.kubestash.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - repositories
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: release-name-kubestash-operator-webhook
        namespace: default
        path: /validate-storage-kubestash-com-v1alpha1-retentionpolicy
      caBundle: bm90LWNhLWNlcnQ=
    failurePolicy: Fail
    name: vretentionpolicy.kb.io
    rules:
      - apiGroups:
          - storage.kubestash.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - retentionpolicies
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: release-name-kubestash-operator-webhook
        namespace: default
        path: /validate-core-kubestash-com-v1alpha1-backupbatch
      caBundle: bm90LWNhLWNlcnQ=
    failurePolicy: Fail
    name: vbackupbatch.kb.io
    rules:
      - apiGroups:
          - core.kubestash.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - backupbatches
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: release-name-kubestash-operator-webhook
        namespace: default
        path: /validate-core-kubestash-com-v1alpha1-backupblueprint
      caBundle: bm90LWNhLWNlcnQ=
    failurePolicy: Fail
    name: vbackupblueprint.kb.io
    rules:
      - apiGroups:
          - core.kubestash.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - backupblueprints
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: release-name-kubestash-operator-webhook
        namespace: default
        path: /validate-core-kubestash-com-v1alpha1-backupconfiguration
      caBundle: bm90LWNhLWNlcnQ=
    failurePolicy: Fail
    name: vbackupconfiguration.kb.io
    rules:
      - apiGroups:
          - core.kubestash.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - backupconfigurations
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: release-name-kubestash-operator-webhook
        namespace: default
        path: /validate-core-kubestash-com-v1alpha1-backupsession
      caBundle: bm90LWNhLWNlcnQ=
    failurePolicy: Fail
    name: vbackupsession.kb.io
    rules:
      - apiGroups:
          - core.kubestash.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - backupsessions
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: release-name-kubestash-operator-webhook
        namespace: default
        path: /validate-core-kubestash-com-v1alpha1-hooktemplate
      caBundle: bm90LWNhLWNlcnQ=
    failurePolicy: Fail
    name: vhooktemplate.kb.io
    rules:
      - apiGroups:
          - core.kubestash.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - hooktemplates
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: release-name-kubestash-operator-webhook
        namespace: default
        path: /validate-core-kubestash-com-v1alpha1-restoresession
      caBundle: bm90LWNhLWNlcnQ=
    failurePolicy: Fail
    name: vrestoresession.kb.io
    rules:
      - apiGroups:
          - core.kubestash.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - restoresessions
    sideEffects: None
